fix: removed scrollbar

--- a/public/style/familytree.css
+++ b/public/style/familytree.css
@@ -43,6 +43,14 @@ body {
                       linear-gradient(to bottom, #f0f0f0 1px, transparent 1px);
     background-size: 40px 40px;
     background-position: -1px -1px;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    overflow: -moz-scrollbars-none;  /* Firefox */
+}
+
+.tree-container::-webkit-scrollbar,
+.tree-content::-webkit-scrollbar {
+    display: none;
 }
 
 .tree-container:active {
